tests/ui/fail/traitdef_on_struct.stderr
error: expected `trait`
 --> tests/ui/fail/traitdef_on_struct.rs:5:1
  |
5 | struct NotATrait {
  | ^^^^^^
